src/objects/Course_Contact_Association__c.object
<CustomObject>
    <description>This saves many to many relationship between contacts with courses</description>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Associated Courses</relationshipLabel>
        <relationshipName>Associated_Courses</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Course_Instructor__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Instructor Role on Course Level : From EDW</inlineHelpText>
        <label>Course Instructor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Course_Membership_Instructor_Timestamp__c</fullName>
        <label>Course Membership Instructor Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Course_Membership_TA_Timestamp__c</fullName>
        <label>Course Membership TA Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Course_Membership_Uni_Admin_Timestamp__c</fullName>
        <label>Course Membership Uni Admin Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Course_Teaching_Staff__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Teaching Staff on Course Level: Pulled from EDW</inlineHelpText>
        <label>Course Teaching Staff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Course_University_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>University Admin role on course level: Pulled from EDW</inlineHelpText>
        <label>Course University Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <label>Course</label>
        <referenceTo>Course__c</referenceTo>
        <relationshipLabel>Associated Contacts</relationshipLabel>
        <relationshipName>Associated_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Course Contact Association</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Course/Contact Association Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Course Contact Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>